resizing and loss detections

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <title>Mines</title>
     </head>
 
-    <body></body>
+    <body>
+        <div id="gamebar"></div>
+        <div id="content"></div>
+    </body>
 </html>
