--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
     <body>
         <div id="gamebar"></div>
-        <div id="content"></div>
+        <div id="content"><canvas></div>
     </body>
 </html>
