--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css" type="text/css">
-        <script src="js/script.js" async></script>
         <title>Mines</title>
+        <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
 
     <body>
         <div id="gamebar"></div>
         <div id="content"><canvas></div>
+        <script src="js/script.js"></script>
     </body>
 </html>
